== Affiliates - Changelog ==

= 4.6.0 =
* WordPress 5.4 compatible.

= 4.5.0 =
* WordPress 5.3 compatibility retested.
* Updated referral process of user registration integration.

= 4.4.0 =
* WordPress 5.3 compatible.

= 4.3.0 =
* Added the formal German (Sie) translation.
* Updated the informal German (Du) translation.
* Added formal and informal translations for German (Austria).
* Added formal and informal translations for German (Switzerland).

= 4.2.0 =
* Improved the affiliate request evaluation procedure.
* Added the affiliates_parse_request_assess_affiliate_id filter.
* Deprecates the affiliates_parse_request_affiliate_id filter.
* Tested with the latest stable (5.2.x) and alpha (5.3.x) versions of WordPress.

= 4.1.0 =
* WordPress 5.2 compatible.
* Fixed a PHP Notice related to an uninitialized variable $valid_affiliate.
* Fixed an issue where rendering the Dashboard overview graph is triggered too early (jQuery not yet available).
* Guarded against a potential issue related to jQuery checks before loading our UI elements.
* Fixed filtering by affiliate on the Affiliates & Referrals admin screen had no effect.

= 4.0.5 =
* Added conditional check for registration message in registration template.
* Replaced uses of get_bloginfo( 'url' ) with home_url().
* Cleaned up unused code.
* Revised the affiliates_bloginfo() function and added optional filters.
* Updated the dashboard registration section to avoid showing a redundant login link when the section is shown alongside the login section.
* Added the options show_login and login_url to the dashboard registration section handler, used and customizable in the registration.php template.
* Added additional escaping on some translated strings.
* Improved the overview dashboard section, user is taken to the home after logout.
* Several code format improvements and replaced use of alias functions.
* Fixed wrong page ID recorded for user registration referrals on checkout.