@@ -1945,121 +1945,7 @@ function affiliates_network_admin_menu() {
 	do_action( 'affiliates_network_admin_menu', $pages );
 }
 
-add_action( 'contextual_help', 'affiliates_contextual_help', 10, 3 );
-
-function affiliates_contextual_help( $contextual_help, $screen_id, $screen ) {
-
-	$pname = get_option( 'aff_pname', AFFILIATES_PNAME );
-
-	$show_affiliates_help = false;
-
-	$title = '<h3>';
-	$title .= sprintf( '<a href="%s" target="_blank">%s</a>', esc_attr( 'http://www.itthinx.com/plugins/affiliates' ), __( 'Affiliates', 'affiliates' ) );
-	$title .= '</h3>';
-
-	$help = apply_filters( 'affiliates_help_tab_title', $title );
-
-	switch ( $screen_id ) {
-		case 'toplevel_page_affiliates-admin' :
-			$show_affiliates_help = true;
-			$help .= '<p>' . __( 'This screen offers an overview with basic statistical data.', 'affiliates' ) . '</p>';
-			$help .= '<ul>';
-			$help .= '<li>' . __( '<em>From operative affiliates:</em> includes affiliates that are currently active. This excludes affiliates whose dates are not currently valid as well as those that have been deleted.', 'affiliates' ) . '</li>';
-			$help .= '<li>' . __( '<em>From operative and non-operative affiliates:</em> excludes deleted affiliates.', 'affiliates' ) . '</li>';
-			$help .= '<li>' . __( '<em>All time</em> includes data from any affiliates, including deleted affiliates.', 'affiliates' ) . '</li>';
-			$help .= '<ul>';
-			$help .= '<ul>';
-			$help .= '<li>' . __( '<em>Hits</em> are HTTP requests for affiliate links.', 'affiliates' ) . '</li>';
-			$help .= '<li>' . __( '<em>Visits</em> are unique and daily requests for affiliate links.', 'affiliates' ) . '</li>';
-			$help .= '<li>' . __( '<em>Referrals</em> are recording commissions and referral data.', 'affiliates' ) . '</li>';
-			$help .= '</ul>';
-			$help .= '<p>';
-			$help .= __( 'The Affiliates plugin provides the <em>Affiliates Contact</em> widget that can be used to record lead referrals.', 'affiliates' );
-			$help .= sprintf( __( 'To use it, place the widget in one of your <a href="%s">widget areas</a>.', 'affiliates' ), get_admin_url( null, 'widgets.php' ) );
-			$help .= '</p>';
-
-			$help .= '<p>';
-			$help .= __( 'Note that <em>deleted</em> affiliates are not literally deleted but marked as such so that data that has been collected will still be accesible.', 'affiliates' );
-			$help .= '</p>';
-			break;
-		case 'affiliates_page_affiliates-admin-affiliates':
-			$show_affiliates_help = true;
-			$help .=
-				'<p>' .
-				__( 'Here you can <strong>add</strong>, <strong>edit</strong> and <strong>remove</strong> affiliates.', 'affiliates' ) .
-				'</p>';
-			$help .=
-				'<ul>' .
-				'<li>' .
-				'<p class="affiliate-link">' .
-				__( 'Affiliate link', 'affiliates' ) .
-				'<p/>' .
-				'<p>' .
-				__( 'This link uses a parameter in the URL to record visits you receive through your affiliates.', 'affiliates' ) . ' ' .
-				'<br/>' .
-				sprintf( __( 'You may also append the ?%s=... part to links to your posts.', 'affiliates' ), $pname ) .
-				'</p>' .
-				'</li>' .
-				'</ul>' .
-				'<p>' .
-				__( 'Once a visitor has landed on your site through an affiliate link, referrals may be recorded and attributed to the affiliate.', 'affiliates' ) .
-				'</p>';
-			break;
-		case 'affiliates_page_affiliates-admin-hits' :
-			$show_affiliates_help = true;
-			break;
-		case 'affiliates_page_affiliates-admin-hits-affiliate' :
-			$show_affiliates_help = true;
-			break;
-		case 'affiliates_page_affiliates-admin-totals' :
-			$show_affiliates_help = true;
-			break;
-		case 'affiliates_page_affiliates-admin-referrals' :
-			$show_affiliates_help = true;
-			break;
-		case 'affiliates_page_affiliates-admin-options' :
-			$show_affiliates_help = true;
-			break;
-		default:
-			$show_affiliates_help = strpos( $screen_id, 'affiliates_page_affiliates' ) !== false;
-	}
-
-	if ( !defined( 'AFFILIATES_PRO_PLUGIN_DOMAIN' ) && !defined( 'AFFILIATES_ENTERPRISE_PLUGIN_DOMAIN' ) ) {
-		$help .= '<p>';
-		$help .= affiliates_donate( false, true );
-		$help .= '</p>';
-	}
-
-	$help .= affiliates_help_tab_footer( false );
-
-	if ( $show_affiliates_help ) {
-		return $help;
-	} else {
-		return $contextual_help;
-	}
-}
-
-/**
- * Returns or renders the common footer for help tabs.
- * @param boolean $render
- * @return string or nothing
- */
-function affiliates_help_tab_footer( $render = true ) {
-	$footer =
-		'<div class="affiliates-documentation">' .
-		sprintf(
-			'<a href="%s">%s</a>',
-			esc_attr( 'http://docs.itthinx.com/document/affiliates/' ),
-			esc_html( __( 'Online documentation', 'affiliates' ) )
-		) .
-		'</div>';
-	$footer = apply_filters( 'affiliates_help_tab_footer', $footer );
-	if ( $render ) {
-		echo $footer;
-	} else {
-		return $footer;
-	}
-}
+require_once AFFILIATES_CORE_LIB . '/class-affiliates-admin-help.php';
 
 /**
  * Returns or renders the footer.
