@@ -2,6 +2,7 @@
 
 = 4.6.0 =
 * WordPress 5.4 compatible.
+* Fixed a notice related to the deprecated contextual_help action.
 
 = 4.5.0 =
 * WordPress 5.3 compatibility retested.
